[gd_scene load_steps=5 format=3 uid="uid://bpmyoo2dlicjq"]

[ext_resource type="Script" path="res://scripts/QuestMarker.gd" id="1_gh1nk"]
[ext_resource type="Texture2D" uid="uid://bm4cabeud3bqs" path="res://assets/interaction-circle.png" id="2_i0eyk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a5lnw"]
radius = 100.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_k1qlw"]
blend_mode = 2

[node name="QuestMarker" type="Node2D"]
z_index = 1000
y_sort_enabled = true
script = ExtResource("1_gh1nk")

[node name="TaskClock" type="Timer" parent="."]

[node name="InteractionArea" type="Area2D" parent="."]

[node name="InteractionCollisionShape" type="CollisionShape2D" parent="InteractionArea"]
visible = false
shape = SubResource("CircleShape2D_a5lnw")
debug_color = Color(0, 0.647059, 0.207843, 0.419608)

[node name="InteractionLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_right = 70.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 3
text = "Press F to Interact"
horizontal_alignment = 1

[node name="Interaction-circle" type="Sprite2D" parent="."]
visible = false
texture_filter = 4
material = SubResource("CanvasItemMaterial_k1qlw")
scale = Vector2(2.2, 2.2)
texture = ExtResource("2_i0eyk")

[connection signal="timeout" from="TaskClock" to="." method="_on_Timer_timeout"]
